--- a/app/views/advanced.slim
+++ b/app/views/advanced.slim
@@ -18,7 +18,7 @@ head
   meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
   script src="https://js.recurly.com/v3/recurly.js"
   script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"
-  link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"
+  link href="//fonts.googleapis.com/css?family=Open+Sans:400,700,600" rel="stylesheet" type="text/css"
   == css :application
 
 body
