--- a/app/assets/stylesheets/themes/kalekrate/forms.scss
+++ b/app/assets/stylesheets/themes/kalekrate/forms.scss
@@ -5,10 +5,11 @@
   background: url('/images/kalekrate/form-header-bg.png') top center no-repeat;
   height: 167px;
   position: relative;
+  background-size: cover;
   @media (-webkit-min-device-pixel-ratio: 2), (-moz-min-device-pixel-ratio: 2) {
     & {
       background: url('/images/kalekrate/form-header-bg@2x.png') top center no-repeat;
-      background-size: 100%;
+      // background-size: 100%;
     }
   }
 
