--- a/app/assets/stylesheets/themes/kalekrate/forms.scss
+++ b/app/assets/stylesheets/themes/kalekrate/forms.scss
@@ -2,14 +2,14 @@
 @import 'mixins';
 
 .form-header {
-  background: url('/images/kalekrate/form-header-bg.png') top center no-repeat;
+  background: url('/images/kalekrate/form-header-bg.png') center no-repeat;
   height: 167px;
   position: relative;
   background-size: cover;
   @media (-webkit-min-device-pixel-ratio: 2), (-moz-min-device-pixel-ratio: 2) {
     & {
-      background: url('/images/kalekrate/form-header-bg@2x.png') top center no-repeat;
-      // background-size: 100%;
+      background: url('/images/kalekrate/form-header-bg@2x.png') center no-repeat;
+      background-size: cover;
     }
   }
 
