--- a/app/views/minimal.slim
+++ b/app/views/minimal.slim
@@ -14,6 +14,7 @@ head
   == partial(:'shared/scripts')
   == css :application
   == css :minimal
+  == js :minimal_form
 
 body
 
@@ -46,153 +47,37 @@ body
       .row.customer-fields--name
         .form-input.form-input__first_name
           label for="first_name" First Name
-          input type="text" data-recurly="first_name" id="first_name" name="first-name"
+          input type="text" data-recurly="first_name" id="first_name" name="first-name" class="form-input__required"
 
         .form-input.form-input__last_name
           label for="last_name" Last Name
-          input type="text" data-recurly="last_name" id="last_name" name="last-name"
+          input type="text" data-recurly="last_name" id="last_name" name="last-name" class="form-input__required"
 
       .row.customer-fields--email
         .form-input.form-input__email
           label for="email" Email
-          input type="text" data-recurly="email" id="email" name="email"
+          input type="text" data-recurly="email" id="email" name="email" class="form-input__required"
 
       .row.customer-fields--card-number
         .form-input.form-input__number
           label for="number" Credit Card Number
-          input type="text" data-recurly="number" id="number" name="number"
+          input type="text" data-recurly="number" id="number" name="number" class="form-input__required"
           span.icon.icon-card.icon-card__generic
           span.icon.icon-lock
 
       .row.customer-fields--card-details
         .form-input.form-input__selection.customer-fields--card-expiry.form-input__month.form-input__year
           label for="month" Expiration
-          input type="text" data-recurly="month" id="month" name="month" placeholder="MM" maxlength="2"
-          input type="text" data-recurly="year" id="year" name="year" placeholder="YY" maxlength="2"
+          input type="text" data-recurly="month" id="month" name="month" placeholder="MM" maxlength="2" class="form-input__required"
+          input type="text" data-recurly="year" id="year" name="year" placeholder="YY" maxlength="2" class="form-input__required"
 
         .form-input.customer-fields--card-cvv.form-input__cvv
-          label for="cvv" CVC
-          input type="text" data-recurly="cvv" id="cvv" name="cvv" maxlength="4"
+          label for="cvv" CVV
+          input type="text" data-recurly="cvv" id="cvv" name="cvv" maxlength="4" class="form-input__required"
 
-        .form-input
+        .form-input.customer-fields--card-postal-code.form-input__postal_code
           label for="postal_code" Zip Code
-          input type="text" data-recurly="postal_code" id="postal_code" name="postal-code" maxlength="5"
+          input type="text" data-recurly="postal_code" id="postal_code" name="postal-code" maxlength="5" class="form-input__required"
 
       .row
         input type='submit' id="subscribe" class="btn-submit" value="Subscribe"
-
-
-
-javascript:
-  var error_fields = {
-    first_name: 'First name',
-    last_name: 'Last name',
-    email: 'Email address',
-    number: 'Credit Card number',
-    postal_code: 'Postal Code',
-    month: 'Expiration Month',
-    year: 'Expiration Year'
-  }
-
-  // Configure recurly.js
-  recurly.configure('sc-Hw20ERMh8bzGFiWKO7NvDB');
-
-  // On form submit, we stop submission to go get the token
-  $('form').on('submit', function (event) {
-    event.preventDefault();
-
-    // Reset the errors display
-    $('#errors').text('');
-    $('input').removeClass('error');
-    $('.form-input').removeClass('form-input__error');
-
-    // Disable the submit button
-    $('.btn-submit').prop('disabled', true);
-
-    var form = this;
-
-    // Now we call recurly.token with the form. It goes to Recurly servers
-    // to tokenize the credit card information, then injects the token into the
-    // data-recurly="token" field above
-    recurly.token(form, function (err, token) {
-
-      console.log(err);
-
-      if (err) {
-        error(err);
-      }
-      else {
-        var data = {
-          "recurly-token": $('input[name="recurly-token"]').val(),
-          "first-name": $('input[name="first-name"]').val(),
-          "last-name": $('input[name="last-name"]').val(),
-          "email": $('input[name="email"]').val()
-        };
-
-        $.ajax({
-          type: "POST",
-          url: '/api/subscriptions/new',
-          data: data,
-          success: subscription_created(data),
-          dataType: 'json'
-        });
-
-      };
-
-    });
-
-  });
-
-  function subscription_created(data) {
-    $('form').addClass('form__success');
-
-    $('.confirmation').addClass('confirmation__show');
-    $('.confirmation-messaging').addClass('animate');
-  }
-
-  $(document).ready(function() {
-
-    // Identity card type
-    $("#number").on('change', function(event) {
-      var card_number = $("#number").val()
-        , card_type = recurly.validate.cardType(card_number)
-        , card_is_valid = recurly.validate.cardNumber($("#number").val())
-        , number_field = $('.customer-fields--card-number .form-input');
-
-      if(card_is_valid) {
-        $(number_field).removeClass('form-input__error');
-      }
-      else {
-        $(number_field).addClass('form-input__error');
-      }
-
-      if((card_type == 'default') || (card_type == 'unknown')) {
-        $('.icon-card').addClass('icon-card__generic');
-        $('.icon-card').removeClass('icon-card__visa icon-card__mastercard icon-card__amex icon-card__visa discover');
-      }
-      else {
-        $('.icon-card').removeClass('icon-card__generic');
-        $('.icon-card').addClass('icon-card__' + card_type);
-      }
-    });
-
-  });
-
-
-  // A simple error handling function to expose errors to the customer
-  function error (err) {
-    var errors_markup = $.map(err.fields, function (field) {
-      $('.form-input__' + field).addClass('form-input__error');
-      return '<li class="form-errors--invalid-field">'+ error_fields[field] +'</li>';
-    }).join('');
-
-    $('.form-errors').removeClass('form-errors__hidden');
-    $('.form-errors ul')
-      .empty()
-      .append(errors_markup);
-
-    $('input[type="submit"]').prop('disabled', false);
-    $.each(err.fields, function (i, field) {
-      $('[data-recurly=' + field + ']').addClass('error');
-    });
-  }
