--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -26,7 +26,8 @@ label {
   display: block;
 }
 
-input[type='text'] {
+input[type='text'],
+input[type='number'] {
   display: block;
   width: 100%;
   height: 40px;
