--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -42,3 +42,61 @@
   padding-left: 7px;
   width: 30%;
 }
+
+
+.addons-container {
+  background-color: #FFFFFF;
+  float: left;
+  margin: 0;
+  width: 100%;
+}
+
+  .addons-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .addons-list--item {
+    float: left;
+    display: block;
+    position: relative;
+    width: 100%;
+    min-height: 70px;
+    border-bottom: 1px solid #EDEDED;
+  }
+
+    .addon-item--name {
+      font-size: 14px;
+      display: block;
+      color: #48626C;
+      line-height: 42px;
+    }
+
+    .addon-item--description {
+      color: #9B9B9B;
+      display: block;
+      font-size: 11px;
+    }
+
+    .addon-item--pricing {
+      float: right;
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+
+      .addon-item--price {
+        color: #48626C;
+        display: block;
+        font-size: 14px;
+        float: left;
+        line-height: 42px;
+      }
+
+      .addon-item--quantity {
+        text-align: center;
+        width: 40px;
+        float: right;
+        margin-left: 7px;
+      }
