--- a/app/views/advanced.slim
+++ b/app/views/advanced.slim
@@ -14,14 +14,18 @@ head
   == partial(:'shared/scripts')
   == css :application
   == css :advanced
-  == js :minimal_form
+  == js :advanced_form
 
 body
 
   .form
     .form-bar
       .subscription-name-container
-        strong.subscription-name Kale Lover's Crate
+        select data-recurly="plan" id="plan" name="plan"
+          option value="kale-fan" Kale Fan
+          option value="kale-krazy" Kale Krazy
+
+        input type="text" data-recurly="plan_quantity" id="plan_quantity" name="plan-quantity" class="form-input__required" value="1"
       .subscription-pricing-container
         .subscription-pricing
           span.subscription-price $20.99
@@ -38,6 +42,40 @@ body
         .form-errors.form-errors__hidden
           strong Oops! The following fields appear to be invalid:
           ul
+
+      .addons-container
+        .row
+          ul.addons-list
+            li.addons-list--item
+              span.addon-item--name Salad Spinner
+              span.addon-item--description Progressive Collapsible Salad Spinner - White/Clear (5 Qt)
+              .addon-item--pricing
+                span.addon-item--price $9.99
+                .form-input.addon-item--quantity
+                  input type="text" data-recurly="addon" name="addon" data-recurly-addon='salad-spinner' value="0" min="0"
+
+            li.addons-list--item
+              span.addon-item--name Sliced Almonds
+              .addon-item--pricing
+                span.addon-item--price $3.00
+                .form-input.addon-item--quantity
+                  input type="text" data-recurly="addon" name="addon" data-recurly-addon='sliced-almonds' value="0" min="0"
+
+            li.addons-list--item
+              span.addon-item--name Mixed Fruits
+              span.addon-item--description Raisins, cranberries, apricots
+              .addon-item--pricing
+                span.addon-item--price $3.00
+                .form-input.addon-item--quantity
+                  input type="text" data-recurly="addon" name="addon" data-recurly-addon='mixed-fruits' value="0" min="0"
+
+            li.addons-list--item
+              span.addon-item--name Chopped Veggies
+              .addon-item--pricing
+                span.addon-item--price $5.00
+                .form-input.addon-item--quantity
+                  input type="text" data-recurly="addon" name="addon" data-recurly-addon='chopped-veggies' value="0" min="0"
+
 
       .row.customer-fields--name
         .form-input.form-input__first_name
@@ -79,6 +117,14 @@ body
 
         .form-input.form-input__postal-code
           input type="text" data-recurly="postal_code" id="postal_code" name="postal-code" class="form-input__required" placeholder="Zip Code"
+
+      .order-summary-container
+        .row.order-summary
+          div
+            | Total
+            span data-recurly="total_now" id="total_now" name="total-now" class="order-summary--total"
+
+
 
       .row
         input type='submit' id="subscribe" class="btn-submit" value="Subscribe"
