--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -1,11 +1,6 @@
 @import 'variables';
+@import 'grid';
 @import 'mixins';
-
-.form {
-  .row {
-    margin-bottom: 13px;
-  }
-}
 
 .customer-fields--card-details {
   .form-input {
@@ -62,15 +57,17 @@
     display: block;
     position: relative;
     width: 100%;
-    min-height: 70px;
+    // min-height: 70px;
     border-bottom: 1px solid #EDEDED;
+    padding: 10px 0;
   }
 
     .addon-item--name {
       font-size: 14px;
       display: block;
       color: #48626C;
-      line-height: 42px;
+      margin-top: 10px;
+      // line-height: 42px;
     }
 
     .addon-item--description {
@@ -80,9 +77,11 @@
     }
 
     .addon-item--pricing {
-      float: right;
-      position: absolute;
-      top: 0;
+      // float: right;
+      // position: absolute;
+      // top: 0;
+      // right: 0;
+      @include verticalAlign();
       right: 0;
     }
 
@@ -100,3 +99,74 @@
         float: right;
         margin-left: 7px;
       }
+
+form {
+  display: block;
+  margin: 0 auto;
+  padding: 0;
+
+  @include mq($xsmall) {
+  }
+
+  @include mq($small) {
+    width: grid-width(5);
+  }
+
+  @include mq($medium) {
+    width: grid-width(5);
+  }
+
+  @include mq($large) {
+    width: grid-width(12);
+  }
+
+}
+
+  .subscription-details-container {
+    float: left;
+    background-color: #FAFAFA;
+    margin: 0 auto;
+    overflow: hidden;
+    width: 100%;
+
+    @include mq($large) {
+      float: left;
+      width: grid-width(8);
+    }
+  }
+
+    .addons-container {
+      background-color: #ffffff;
+      float: left;
+    }
+
+      .addons-list {
+        margin: 0 25px;
+      }
+
+    .billing-info-container {
+      background-color: #fafafa;
+      float: left;
+
+      .row {
+        padding: 0 25px;
+      }
+    }
+
+  .order-summary-container {
+    background-color: #fafafa;
+    float: right;
+    width: 100%;
+
+    @include mq($large) {
+      float: right;
+      width: grid-width(4);
+    }
+  }
+
+    .order-summary-title {
+      background-color: #E2E7E9;
+      float: left;
+      padding: 10px 25px;
+      width: 100%;
+    }
