--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -17,7 +17,9 @@ head
   == js :advanced_form
 
 body
+
   .test
+
   form
     .row
       .subscription-details-container
@@ -40,37 +42,10 @@ body
           ul
 
         section.addons-container
-          .row
-            ul.addons-list
-              li.addons-list--item
-                span.addon-item--name Salad Spinner
-                .addon-item--pricing
-                  span.addon-item--price $9.99
-                  .form-input.addon-item--quantity
-                    input type="text" data-recurly="addon" name="addon" data-recurly-addon='salad-spinner' value="0" min="0"
-
-              li.addons-list--item
-                span.addon-item--name Sliced Almonds
-                .addon-item--pricing
-                  span.addon-item--price $3.00
-                  .form-input.addon-item--quantity
-                    input type="text" data-recurly="addon" name="addon" data-recurly-addon='sliced-almonds' value="0" min="0"
-
-              li.addons-list--item
-                span.addon-item--name Mixed Fruits
-                .addon-item--pricing
-                  span.addon-item--price $3.00
-                  .form-input.addon-item--quantity
-                    input type="text" data-recurly="addon" name="addon" data-recurly-addon='mixed-fruits' value="0" min="0"
-
-              li.addons-list--item
-                span.addon-item--name Chopped Veggies
-                .addon-item--pricing
-                  span.addon-item--price $5.00
-                  .form-input.addon-item--quantity
-                    input type="text" data-recurly="addon" name="addon" data-recurly-addon='chopped-veggies' value="0" min="0"
-
+          
         section.billing-info-container
+          .row
+            h3.section-title--billing Billing Information
           .row.customer-fields--name
             .form-input.form-input__first_name
               input type="text" data-recurly="first_name" id="first_name" name="first-name" class="form-input__required" placeholder="First Name"
@@ -128,3 +103,5 @@ body
 
           .row
             input type='submit' id="subscribe" class="btn-submit" value="Subscribe"
+
+  == partial(:'handlebars/addons')
