WIP: format add-on price

--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -21,6 +21,7 @@ body
   .test
 
   form
+    input type="hidden" data-recurly="currency" id="plan_currency" name="plan-currency" value="USD"
     .row
       .subscription-details-container
         section.form-bar
@@ -42,7 +43,7 @@ body
           ul
 
         section.addons-container
-          
+
         section.billing-info-container
           .row
             h3.section-title--billing Billing Information
