--- a/app/views/advanced.slim
+++ b/app/views/advanced.slim
@@ -93,6 +93,15 @@ body
       .row
         input type='submit' id="subscribe" class="btn-submit" value="Subscribe"
 
+        .order-summary-container
+          header .order-summary-title
+            h2 Order Summary
+          section .order-summary-details
+            .row.order-summary
+              div Total
+                span class="order-summary--total" data-recurly="total_now" id="total_now" name="total-now"
+            .row
+              input class="btn-submit" id="subscribe" type="submit" value="Subscribe"
 
 
 javascript:
