--- a/app/views/advanced.slim
+++ b/app/views/advanced.slim
@@ -94,14 +94,14 @@ body
         input type='submit' id="subscribe" class="btn-submit" value="Subscribe"
 
         .order-summary-container
-          header .order-summary-title
+          header.order-summary-title
             h2 Order Summary
-          section .order-summary-details
+          section.order-summary-details
             .row.order-summary
               div Total
-                span class="order-summary--total" data-recurly="total_now" id="total_now" name="total-now"
+                span.order-summary--total data-recurly="total_now" id="total_now" name="total-now"
             .row
-              input class="btn-submit" id="subscribe" type="submit" value="Subscribe"
+              input.btn-submit id="subscribe" type="submit" value="Subscribe"
 
 
 javascript:
